force-app/main/default/objects/Case/fields/DemoDevOpsCheckin__c.field-meta.xml
<CustomField>
    <fullName>DemoDevOpsCheckin__c</fullName>
    <label>Demo DevOps Checkin</label>
    <length>100</length>
    <type>Text</type>
</CustomField>