force-app/main/default/objects/Case/fields/test0504__c.field-meta.xml
<CustomField>
    <fullName>test0504__c</fullName>
    <label>test0504</label>
    <length>255</length>
    <type>Text</type>
</CustomField>